Mon Jan 23 15:31:11 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendListener.cpp:

          Marked Default QoS values can't be used as regular QoS values.

Sat Jan 21 04:05:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "RTPS", which includes the initial OpenDDS
          implementation of the DDS Interoperability Protocol, known as
          Real-Time Publish-Subscribe, version 2.1, OMG formal/2010-11-01.
          Not all DDS QoS policies and features are implemented, see the
          notes in docs/design/RTPS.  All of the changes developed on that
          branch are described in docs/history/ChangeLog-RTPS-2.
          RTPS Discovery and Transport mechanisms are separately
          configurable and neither is enabled by default.

Tue Jan 17 18:41:57 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Compiler/idl_test1_main/main.cpp:

          Removed unused variables.

Thu Jan 12 12:57:54 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/subscriber.cpp:

          Adjusting the transport configuration to allow test to work on
          all platforms.

Wed Jan 11 20:06:14 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Changed to use send_buffer_size and rcv_buffer_size in the configuration
          to set the send and receive socket buffer size.

        * dds/DCPS/transport/udp/UdpInst.h:
        * dds/DCPS/transport/udp/UdpInst.cpp:

          Added send_buffer_size and rcv_buffer_size to configuration.

Wed Jan 11 14:03:43 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/LargeSample/DataReaderListener.cpp:

          Changed to use zero copy.

        * tests/DCPS/LargeSample/subscriber.cpp:

          Added line to always indicate how many messages were received, whether
          it is passing or failing.
